legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr80295.c-5.4.0-0.out.txt
pr80295.c: In function ‘f’:
pr80295.c:6:3: error: too few arguments to function ‘__builtin_update_setjmp_buf’
   __builtin_update_setjmp_buf (b); 
   ^
